Compiler/tests/good/set2.nx
type t = [0 .. 10];

foreach i in t
{
    printn(i);
}