Compiler/tests/bad/while1.nx
type t = [0 .. 10];

while(t)
{
    
}